--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
-  background-image: url("https://timtruong.com.vn/wp-content/uploads/nganninh201.jpg");
+  background-image: url("https://i.pinimg.com/originals/86/45/80/864580d6f1fa8d2d0e96247124289887.jpg");
   background-size: 1920px 1080px;
   left: 800px;
 }
