--- a/style.css
+++ b/style.css
@@ -50,3 +50,13 @@ li a:hover {
   color: white;
   font-weight: bold;
 }
+footer{
+   position: relative;
+     width: 100%;
+     height: auto;
+     padding: 50px 100px;
+     background: #111;
+     display: flex;
+     justify-content: space-between;
+     flex-wrap: wrap;
+}
